# FastAPI_TaskManager

./: README.md  docker-compose.yml  main.py  pyproject.toml
templates/: login.html  register.html  tasks.html
